# docs/swagger.json
@@ -4,8 +4,8 @@
         "description": "API untuk memproses foto nutrition facts dan barcode",
         "title": "NutriSnap API",
         "contact": {
-            "name": "NutriSnap Support",
-            "email": "support@nutrisnap.app"
+            "name": "Hubbal Kholiq Habbaza",
+            "email": "habbazahubbal@gmail.com"
         },
         "license": {
             "name": "MIT",
@@ -1257,8 +1257,18 @@
                 "nutri_score_value": {
                     "type": "integer"
                 },
+                "nutrients": {
+                    "$ref": "#/definitions/models.Nutrients"
+                },
+                "ocr_raw": {
+                    "description": "Debugging field",
+                    "type": "string"
+                },
                 "processing_time_ms": {
                     "type": "integer"
+                },
+                "serving_size": {
+                    "type": "string"
                 },
                 "status": {
                     "$ref": "#/definitions/models.ScanStatus"
